# cppcon15-secp

./: .gitignore  CMakeLists.txt  README.md
Examples/: BadApp.cpp  BetterApp.cpp  CMakeLists.txt  Conversions.cpp  IntOverflow.cpp  Properties.cpp  Properties.hpp  PropertyErrors.cpp  PropertyErrors.hpp  PropertyTypes.hpp  UintWrap.cpp
cmake/: ConfigureThirdparty.cmake  DetectPlatform.cmake  RFC6125Notes.txt
examples/: BetterApp.cpp  CMakeLists.txt  Conversions.cpp  Properties.cpp  PropertyTypes.cpp  PropertyTypes.hpp  UintWrap.cpp
scenario/: CMakeLists.txt  CryptoError.cpp  Hmac.cpp  Hmac.hpp  Logger.cpp  Logger.hpp  README.md  RandomSequence.hpp  aesgcm256_1.cpp  aesgcm256_3.cpp  aesgcm256_4.cpp
scenario-1/: README.md
scenario-2/: CMakeLists.txt  CryptoController.cpp  CryptoController.hpp  CryptoError.hpp  Hmac.cpp  Logger.cpp  Logger.hpp  RandomSequence.cpp  RandomSequence.hpp  aesgcm256-1.cpp  aesgcm256_1.cpp  aesgcm256_1.hpp  aesgcm256_2.cpp  aesgcm256_2.hpp  aesgcm256_3.cpp  aesgcm256_3.hpp  aesgcm256_4.cpp  aesgcm256_4.hpp
scenario-2/idl/: message.proto
scenario-2/test/: AESEncryptTest.cpp  AesGcmTest.cpp  AesGcmTest1.cpp  AesGcmTest234.cpp  CMakeLists.txt  DemoWrapper.hpp  Harness.cpp  TestCryptoController.cpp  TestCryptoController.hpp
scenario/test/: AesGcmTest1.cpp  CMakeLists.txt  TestCryptoController.cpp  TestCryptoController.hpp
